Updated config file
with addition for Encryption

--- a/nitrogen6sx_defconfig
+++ b/nitrogen6sx_defconfig
@@ -57,3 +57,14 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="imx6sx-nitrogen6sx"
 #BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_TARBALL_LOCATION="https://github.com/boundarydevices/imx-atf/archive/67c68675.tar.gz"
 #BR2_TARGET_ARM_TRUSTED_FIRMWARE_PLATFORM="imx6mq"
 #BR2_TARGET_ARM_TRUSTED_FIRMWARE_BL31=y
+
+#Secondary storage Encryption
+BR2_PACKAGE_HOST_PARTED=y
+BR2_PACKAGE_HOST_CRYPTSETUP=y
+BR2_PACKAGE_RSYNC=y
+
+#Security options
+BR2_SSP_STRONG=y
+BR2_RELRO_FULL=y
+BR2_TARGET_GENERIC_PASSWD_SHA256=y
+BR2_TOOLCHAIN_BUILDROOT_USE_SSP=y
